<resources>
    <string name="app_name">My Modules</string>
    <string name="detail">In Detail Page</string>
    <string name="your_modules">Your Modules:</string>
    <string name="c203">C203 Web AppIn Development in PHP</string>
    <string name="c206">C206 Software Development Process</string>
    <string name="c218">C218 UI/UX Design for Apps</string>
    <string name="c235">C235 IT Security and Management</string>
    <string name="c346">C346 Mobile App Development</string>
    <string name="general">Module Code: \nModule Name: \n\nAcademic Year: \nSemester: \nModule Credit: \nVenue:</string>
    <string name="go_back">GO BACK</string>
</resources>