<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvModules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5E1ED5"
        android:fontFamily="serif-monospace"
        android:text="@string/your_modules"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tvC203"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c203"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvC206"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c206"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvC218"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c218"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvC235"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c235"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvC346"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c346"
        android:textColor="#000000"
        android:textSize="20dp" />

</LinearLayout>